# cleanco

./: .gitignore  .travis.yml  CHANGES.txt  README.md  cleanco (localhost's conflicted copy 2015-01-11).py  cleanco.py  cleancotest.py  conn.py  conversion.ipynb  countries.csv  fakenames.py  iso-20275-lookup.py  pyproject.toml  readme (localhost's conflicted copy 2015-01-11).md  readme.md  readme.me  requirements.txt  setup.py  termdata.py  test2.py  tox.ini  try.py
.github/workflows/: codeql-analysis.yml  python-package.yml
cleanco/: __init__.py  classify.py  clean.py  cleanco.py  conn.py  iso-20275-lookup.py  iso20275lookup.py  iso_test.py  non_nfkd_map.py  termdata.py  terms.sql  utils.py
data/: terms.db
tests/: README.txt  companies.csv  test2.py  test_classify.py  test_cleanname.py
