[tool.poetry]
name = "cleanco"
version = "2.4-dev"
description = "Python library to process company names"
authors = ["Paul Solin <paul@paulsolin.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/psolin/cleanco"
repository = "https://github.com/psolin/cleanco"
classifiers = [
    "Topic :: Office/Business",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
packages = [{ include = "cleanco" }]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
tox = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
src_paths = ["abzu", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py38, py39, py310, py311, py312, py313
isolated_build = true

[testenv]
deps = pytest
commands = pytest
"""
